# prompt-generation

./: .gitignore  README.md  main.py  pyproject.toml
src/chains/: info_chain.py  prompt_gen_chain.py
src/config/: prompts.py  settings.py
src/graph/: nodes.py  state.py  workflow.py
src/models/: prompt_intructions.py
src/utils/: __init__.py
